--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
 <!DOCTYPE html>
-
-# this is index
-
-## does this read markdown?
-
-_lets find out_
-
-welp at least i got something online from git 
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="your name">
+    <meta name="description" content="description of your page">
+    <meta name="keywords" content="list,of,keywords,separate,by,commas">
+    <title>My Web Page</title>
+</head>
+<body>
+    <h1>Hello World!</h1>
+    <p>This is a paragraph in the page.</p>
+</body>
+</html>
