Added CS and updated index

--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 </head>
 <body>
     <h1>Hello World!</h1>
-    <p>This is a paragraph in the page.</p>
+    <p>wash your hands.</p>
 </body>
 </html>
