--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="author" content="your name">
     <meta name="description" content="description of your page">
     <meta name="keywords" content="list,of,keywords,separate,by,commas">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
     <link rel="stylesheet" href="css/styles.ccs">
     <title>My Web Page</title>
 </head>
